# VoicechnagerBackend

./: CMakeLists.txt  README.md  pom.xml
src/main/cpp/: VoiceChangerJNI.cpp  VoiceProcessor.cpp  VoiceProcessor.h
src/main/cpp/signalsmith-stretch/: signalsmith-stretch.h
src/main/cpp/signalsmith-stretch/plugin/: stop-denormals.h  stretch-vocal.h
src/main/java/com/example/voicechanger/: VoiceChangerApplication.java  VoicechangerApplication.java  VoicechnagerApplication.java
src/main/java/com/example/voicechanger/config/: ServerInfoLogger.java  WebConfig.java
src/main/java/com/example/voicechanger/controller/: EslMonitorController.java  VoiceChangerController.java  VoiceController.java  VoiceMorphController.java
src/main/java/com/example/voicechanger/dto/: VoiceChangerDto.java  VoiceProcessRequest.java
src/main/java/com/example/voicechanger/nativelib/: NativeVoiceProcessor.java  VoiceChangerJNI.java
src/main/java/com/example/voicechanger/service/: VoiceChangerService.java  VoiceMorphService.java  VoiceProcessingService.java
src/main/java/com/example/voicechnager/: VoicechnagerApplication.java
src/main/java/com/example/voicechnager/config/: CorsConfig.java  (+1 more)
src/main/resources/: application.properties  index.html
src/main/resources/static/: esl-monitor.html  index.html
src/main/resources/static/css/: style.css
src/main/resources/static/js/: app.js
src/test/java/com/example/voicechanger/: VoicechangerApplicationTests.java  VoicechnagerApplicationTests.java
src/test/java/com/example/voicechnager/: VoicechnagerApplicationTests.java
(+15 files in other folders)
